base cmdline styling.

--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,10 @@ body {
     color: whitesmoke;
 }
 
+.cmd__line {
+    width: 100%;
+    height: 1em;
+    background-color: inherit;
+    color: inherit;
+    border: none;
+}
