--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,15 @@ body {
     padding: 4px;
 }
 
+.portfolio section img {
+    width: 100%;
+    height: auto;
+}
+.portfolio section p {
+    width: 95%;
+    margin: 0 auto;
+}
+
 @media (max-width: 640px) {
     .cmd__in {
         display: none;
