--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
 }
 
+.center-text {
+    text-align: center;
+}
+
 #cmd__line {
     width: auto;
     height: 1em;
@@ -20,6 +24,16 @@ body {
 .cmd__in__mobile button {
     font-size: 1.5em;
     padding: 4px;
+}
+
+.about {
+    width: 90%;
+    margin: 0 auto;
+}
+.about h2 {
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 32px;
 }
 
 .portfolio section {
